--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
-
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <style>
     @font-face {
       font-family: Gumela;
