--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <style>
+    .spline-watermark {
+      /* visibility: none; */
+      background-color: blueviolet;
+      margin: 100px;
+      padding: 100px;
+
+    }
+
     @font-face {
       font-family: Gumela;
       src: url("../src/fonts/*");
